data/forge_javadoc/1.9.4/processed/net_minecraft_entity_EntityAgeable.md
# EntityAgeable

**Inheritance:** java.lang.Object → net.minecraft.entity.Entity → net.minecraft.entity.EntityLivingBase → net.minecraft.entity.EntityLiving → net.minecraft.entity.EntityCreature → net.minecraft.entity.EntityAgeable

## Class signature

```java
public abstract class EntityAgeable extends EntityCreature
```

## Constructors

- `EntityAgeable(World worldIn)`

## Methods

- `void addGrowth(int growth)`
- `void ageUp(int p_175501_1_, boolean p_175501_2_)`
- `abstract EntityAgeable createChild(EntityAgeable ageable)`
- `protected void entityInit()`
- `int getGrowingAge()`
- `boolean isChild()`
- `void notifyDataManagerChange(DataParameter<?> key)`
- `protected void onGrowingAdult()`
- `void onLivingUpdate()`
- `boolean processInteract(EntityPlayer player, EnumHand hand, ItemStack stack)`
- `void readEntityFromNBT(NBTTagCompound compound)`
- `void setGrowingAge(int age)`
- `protected void setScale(float scale)`
- `void setScaleForAge(boolean child)`
- `protected void setSize(float width, float height)`
- `void writeEntityToNBT(NBTTagCompound compound)`

## Fields

- `protected int forcedAge`
- `protected int forcedAgeTimer`
- `protected int growingAge`